update: apply package jwtkit
